# code-review-project

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
data/: sample1.json  sample2.json  sample3.json
server/src/: main.py
