[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "openai>=2.7.1",
    "pydantic>=2.12.4",
    "ruff>=0.14.3",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
